--- a/THESIS/01-intro.Rmd
+++ b/THESIS/01-intro.Rmd
@@ -4,6 +4,22 @@
 
 Since antiquity the idea of building a thinking machine has always been in the minds of philosophers, artists, sciencemen, kings and commoners alike, filling us with wonder, terror and contemplation.  A human creation capable of human feats, would turn us, at least in an allegorical sense, into gods.
 
+
+Cellular Automata are discrete dynamical systems, that are well suited for the modelling of real world phenomens, particularly those who present characteristics of complex systems, such as emergent behaviour, chaotic behauvior, local behaviour, simple interactions but many actors.
+Nonetheless Cellular Automata field is rich with theory and any contribution to ...
+In this work we have used the forest fire automata as an environment and he have defined a ...
+
+We use state of the art deep reinforcement learning (DRL) algorithms to control the dynamics of
+cellular automata (CA) models. We assume there is an agent that can interact with the CA model by
+changing the state of one or more cells in the CA during each time step. The set of actions the agent
+can take vary with each specific CA model. For instance, in a CA that models the spread of fire, we
+model the agent as a helicopter flying over the CA that on each step can move to an adjacent cell and
+put out the fire of the cell in its current location. The goal of the agent is to minimize the spread of
+fire during the simulation. Our results show that DRL algorithms can control important aspects of
+CAs that model the behavior of real complex systems. On the other hand, this work shows that many
+CA models can be used as benchmarks for DRL algorithms that are closer to practical applications
+than many current benchmarks based on video games.
+
 ## Objectives
 
 ### Main Objectives
