--- a/THESIS/02-automata.Rmd
+++ b/THESIS/02-automata.Rmd
@@ -10,10 +10,10 @@ The topic of CA dates back to the 1950's spanning a history of 70 years. Since t
 
 Perhaps the reason behind this popularity is their simplicity. CA are composed of decentralized interactions of their individual parts (cells), these cells are usually  arranged in a very regular grid and are updated following the same rules for all cells. The rules only take into account the vicinity of a given cell. From this design specifications one could naively anticipate that a very homogeneous state is reached after some iterations of the CA. But this is not always the case, surprisingly for some simple configurations and rules, complex behavior emerges. This behavior is rich enough to be used to model natural systems. The structures that arises from local interactions where not designed _a priori_ and their nature is capricious as they could be oscillating, chaotic, ordered, random, transient, stable. Their scale is also far from the initial size of the cell neighborhoods.
 
-(ref:CA-examples) Cellular Automata Examples. Image taken from the book "Designing Beauty: The Art of Cellular Automata" [@adamatzky2016designing].
+(ref:CA-example) A glider gun, a famous pattern, from Conway's Cellular Automaton "Game of Life". Image taken from: *https://en.wikipedia.org/wiki/File:Game_of_life_glider_gun.svg*.
 
-```{r CA-examples, fig.cap='(ref:CA-examples)', out.width='80%', fig.asp=.75, fig.align='center', echo=FALSE}
-knitr::include_graphics('pics/examples_CA.png')
+```{r CA-example, fig.cap='(ref:CA-example)', out.width='80%', fig.asp=1.0, fig.align='center', echo=FALSE}
+knitr::include_graphics('pics/Game_of_life_glider_gun.svg')
 ```
 
 ## Main Characteristics
@@ -65,12 +65,15 @@ $$ F: S^{V(G)} \rightarrow S^{V(G)} $$
 $$ (F(\sigma))_k = f_k(\sigma_{V_k}) $$
 The global update $F$ is calculated by applying a local function $f_k$ per automata at $k$. In the classical setting $f_k$ is the same for all the automata.
 
-```{r CA-neighborhoods, fig.cap='No shenanigans allowed', out.width='80%', fig.asp=.75, fig.align='center', echo=FALSE}
-knitr::include_graphics('pics/neighborhoods.png')
+(ref:CA-lattice) The underlying graph structure of a Cellular Automaton. 
+A highlighted cell and its neighbors. Image adapted from [@hoekstra2010simulating].
+```{r CA-lattice, fig.cap='(ref:CA-lattice)', out.width='80%', fig.asp=.75, fig.align='center', echo=FALSE}
+knitr::include_graphics('pics/lattice.png')
 ```
 
-```{r CA-lattice, fig.cap='sdfsdfsdf', out.width='80%', fig.asp=.75, fig.align='center', echo=FALSE}
-knitr::include_graphics('pics/lattice.png')
+(ref:CA-neighborhoods) Different types of neighborhoods. Image adapted from [@hoekstra2010simulating].
+```{r CA-neighborhoods, fig.cap='(ref:CA-neighborhoods)', out.width='80%', fig.asp=.75, fig.align='center', echo=FALSE}
+knitr::include_graphics('pics/neighborhoods.png')
 ```
 
 ## Classification
@@ -178,7 +181,7 @@ During the 80s the notoriety of CA was boosted to the current status as CA becam
 Since then applications have been coming in a variety of domains. In the biological sciences models of excitable media, developmental biology, ecology, shell pattern formation and immunology, to name a few, have been proposed [@ermentrout1993cellular]. CA can be applied in image processing for noise removal and border detection [@popovici2002cellular]. For physical systems fluid and gas dynamics are well suited for CA modeling [@margolus1984physics]. Also they have been proposed as a discrete approach to expressing physical laws [@vichniac1984simulating].
 
 ```{r key-events}
-caption_str <- 'Key events in the history of Cellular Automata. Table taken from the book Cellular Automata A Discrete Universe (Ilachinski 2001).'
+caption_str <- 'Key events in the history of Cellular Automata. Table adapted from the book Cellular Automata A Discrete Universe (Ilachinski 2001).'
 key_events <- tibble::tribble(
   ~Year, ~Researcher,              ~Discovery,
   1936,  'Turing',                 'Formalized the concept of computability.',
